--- a/style.css
+++ b/style.css
@@ -56,3 +56,31 @@ h1 {
     color: rgb(201, 201, 201);
     font-size: 22px;
 }
+
+.popular-container {
+    margin-top: 20px;
+}
+
+.btn {
+    width: 140px;
+    height: 40px;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+    font-style: normal;
+    color: rgb(201, 201, 201);
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.btn:last-child {
+    margin-right: 0;
+}
+
+.btn:hover {
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.btn:active {
+    background: rgba(0, 0, 0, 0.5);
+}
