feat: change JS, add default condition, do html more readeable, clear css

--- a/style.css
+++ b/style.css
@@ -98,22 +98,19 @@ body {
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, .2);
+    transition: all 1s ease;
 }
 
-.input-container {
-    margin-top: 140px;
+input {
+    margin: 140px auto;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-
-}
-
-.input-container input {
     border: none;
     border-radius: 4px;
     outline: none;
-    padding: 4px 8px;
+    padding: 5px 10px;
     background-color: rgb(235, 235, 235);
     font-size: 14px;
 }
