--- a/style.css
+++ b/style.css
@@ -79,6 +79,11 @@ body {
     color: rgb(230, 230, 230);
     background: rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    transition: all .2s ease-in-out;
+}
+
+.btn.active {
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .btn:hover {
